@@ -483,16 +483,16 @@ class SC_mod_tools_dbint_index {
 		}
 
 			// Tables and lost records
-		$id_list = '-1,0,'.implode(array_keys($admin->page_idArray),',');
-		$id_list = t3lib_div::rm_endcomma($id_list);
+		$id_list = '-1,0,' . implode(',', array_keys($admin->page_idArray));
+		$id_list = rtrim($id_list, ',');
 		$admin->lostRecords($id_list);
 
-		if ($admin->fixLostRecord(t3lib_div::_GET('fixLostRecords_table'),t3lib_div::_GET('fixLostRecords_uid')))	{
+		if ($admin->fixLostRecord(t3lib_div::_GET('fixLostRecords_table'), t3lib_div::_GET('fixLostRecords_uid'))) {
 			$admin = t3lib_div::makeInstance('t3lib_admin');
 			$admin->backPath = $BACK_PATH;
 			$admin->genTree(0,'');
-			$id_list = '-1,0,'.implode(array_keys($admin->page_idArray),',');
-			$id_list = t3lib_div::rm_endcomma($id_list);
+			$id_list = '-1,0,' . implode(',', array_keys($admin->page_idArray));
+			$id_list = rtrim($id_list, ',');
 			$admin->lostRecords($id_list);
 		}
 
